--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.derby.jar=E:\\Archivos de programas\\derby\\Orion_Proyect\\Orion_Proyect\\src\\Librerias\\derby.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\19052403-5\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\camilo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
