--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.derby.jar=E:\\Archivos de programas\\derby\\Orion_Proyect\\Orion_Proyect\\src\\Librerias\\derby.jar
+file.reference.derby.jar=C:\\Users\\Ikaro\\Documents\\GitHub\\gimnasioDisenoApp
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\camilo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Ikaro\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
