--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,13 +30,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.derby.jar=G:\\Proyectos\\WebBeans\\SoftwareEstacionamiento\\src\\lib\\derby.jar
+file.reference.derby.jar-1=F:\\Archivos de programas\\derby\\db-derby-10.13.1.1-bin\\lib\\derby.jar
 file.reference.jcalendar-1.4.jar=src/lib/jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.derby.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.derby.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
